<resources>
    <string name="app_name">MyStoryApp</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="havent">Not have an account? </string>
    <string name="register">Register</string>
    <string name="name">Username</string>
    <string name="have">"Already have an account?"</string>
    <string name="let_s_explore_the_worlds">Let\'s explore\nthe world</string>
    <string name="searchbarHint">Search something...</string>
    <string name="this_is_title">This is title</string>
    <string name="description">Lorem ipsum dolor sit amet, consectual amigos lorem ipsum amigos lorem ipsum dolor sitametamigos</string>
    <string name="createdat">Uploaded at 12 Aug 2023</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="write_description">Description...</string>
    <string name="Add">Add New Story</string>
    <string name="upload_image">Upload Image</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="gallery">Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="bookmark">Bookmark</string>
    <string name="title_img1">Welcome to StoryApp</string>
    <string name="desc_img1">Discover, create, and share your stories with a vibrant community. Dive into a world where every story matters</string>
    <string name="title_img2">Create Your Stories</string>
    <string name="desc_img2">Unleash your creativity with our easy-to-use tools. Capture your moments and transform them into engaging stories</string>
    <string name="title_img3">Connect and Share</string>
    <string name="desc_img3">Share your stories with friends and followers. Explore stories from around the world and connect with like-minded individuals</string>

    <string name="success">Success</string>
    <string name="success_desc">Your login is successfull</string>
    <string name="okay">Okay</string>
    <string name="oops_this_feature_is_currently_under_development">Oops, this feature is currently under development</string>
    <string name="oops_no_data_available_to_display">Oops, no data available to display</string>
    <string name="your_story_has_been_successfully_uploaded">Your story has been successfully uploaded!</string>
    <string name="your_account_has_been_successfully_created">Your account has been successfully created</string>
    <string name="logout">Log Out</string>
    <string name="logout_desc">Are you sure you want to log out?</string>
    <string name="no">No, continue to app</string>
    <string name="yes">Yes, log me out</string>
    <string name="Menu">Menu</string>
    <string name="profile">Profile</string>

    <string name="dateFormat">Uploaded on %1$s</string>
    <string name="password_info">Password must be more than 8 characters long</string>
    <string name="change_lang">Change Language</string>
    <string name="fill_all_first">Fill all first</string>
    <string name="input_your_email_address">Input your email address</string>
    <string name="input_your_name">Input your name</string>
    <string name="input_your_password">Input your password</string>
    <string name="submit">Submit</string>
    <string name="login_failed">Login failed: %1$s</string>
    <string name="register_failed">Register failed: %1$s</string>
    <string name="selamat_pagi">Good Morning</string>
    <string name="appwidget_text">STACK IMAGE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Stack image widget</string>
    <string name="empty_text">NO DATA</string>
    <string name="retry">Coba Lagi</string>
    <string name="tambahkan_lokasi_saat_ini">Tambahkan lokasi saat ini</string>
</resources>