<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:fitsSystemWindows="true"
    android:background="@color/background"
    tools:context=".uiapp.DetailStoryActivity">
<com.google.android.material.card.MaterialCardView
    android:transitionName="image"
    android:layout_marginTop="30dp"
    android:id="@+id/card_image"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:cardCornerRadius="30dp"
    style="@style/Widget.Material3.CardView.Filled">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageButton
            android:layout_marginTop="16dp"
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_circular_blue"
            android:src="@drawable/ic_back"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>

    <TextView
        android:transitionName="title"
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans_semibold"
        android:text="@string/this_is_title"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_image" />

    <ImageView
        android:id="@+id/iv_ikondate"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_createdat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/worksans_medium"
        android:text="@string/createdat"
        android:layout_marginStart="5dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_ikondate"
        app:layout_constraintStart_toEndOf="@+id/iv_ikondate"
        app:layout_constraintTop_toTopOf="@id/iv_ikondate" />

    <ImageButton
        android:id="@+id/btn_bookmark"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_circular_blue"
        android:src="@drawable/ic_bookmark"
        app:layout_constraintBottom_toBottomOf="@+id/iv_ikondate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title" />

    <TextView
        android:transitionName="desc"
        android:textAlignment="textStart"
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/worksans_light"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_ikondate" />

</androidx.constraintlayout.widget.ConstraintLayout>